<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Main"
        android:background="@drawable/main_background">

    <TextView
            android:id="@+id/textView1"
            android:layout_width="255dp"
            android:layout_height="59dp"
            android:layout_gravity="center"
            android:fontFamily="@font/javatext"
            android:text="@string/DawnNote"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.018" />
    <TextView
            android:text="@string/Statistics"
            android:fontFamily="@font/korean"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/name1"
            app:layout_constraintTop_toBottomOf="@+id/probability_folder"
            app:layout_constraintStart_toStartOf="@+id/probability_folder"
            app:layout_constraintEnd_toEndOf="@+id/probability_folder"
    />
    <TextView
            android:text="@string/CLanguage"
            android:fontFamily="@font/korean"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/name2"
            app:layout_constraintTop_toBottomOf="@+id/c_folder"
            app:layout_constraintStart_toStartOf="@+id/c_folder"
            app:layout_constraintEnd_toEndOf="@+id/c_folder"/>
    <TextView
            android:text="@string/DataStructure"
            android:fontFamily="@font/korean"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/name3"
            app:layout_constraintTop_toBottomOf="@+id/ds_folder"
            app:layout_constraintStart_toStartOf="@+id/ds_folder"
            app:layout_constraintEnd_toEndOf="@+id/ds_folder"/>

    <ImageView
            android:layout_width="50dp"
            android:layout_height="49dp"
            app:srcCompat="@drawable/moon"
            android:id="@+id/imageView"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.225"
            app:layout_constraintVertical_bias="0.032"/>
    <ImageButton
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/detective" android:id="@+id/floder_list_search"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.933"
            app:layout_constraintVertical_bias="0.037"/>
    <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/folder"
            android:id="@+id/probability_folder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25" android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp" android:layout_marginTop="60dp"/>
    <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/folder" android:id="@+id/c_folder"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="60dp"
            app:layout_constraintVertical_bias="0.25" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.498"/>
    <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/folder" android:id="@+id/ds_folder"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.25"
            android:layout_marginTop="60dp"/>
    <Button
            android:id="@+id/folder_list_switch"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="121dp"
            android:layout_height="68dp"
            android:layout_marginTop="10dp"
            android:drawableTop="@drawable/note_toggle"
            app:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1"/>
    <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/javatext"
            android:text="Note"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/folder_list_switch"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/javatext"
            android:text="Tag"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toEndOf="@+id/folder_list_switch"
            app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/folder"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/add_folder_button"
        app:backgroundTint="#00523131"
        app:layout_constraintBottom_toBottomOf="@id/imageButton2"
        app:layout_constraintEnd_toEndOf="@id/imageButton2"
        app:layout_constraintStart_toStartOf="@id/imageButton2"
        app:layout_constraintTop_toTopOf="@id/imageButton2"
        app:maxImageSize="55dp"
        app:rippleColor="#2196F3" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/note"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:adjustViewBounds="true"
        android:src="@drawable/add_note_button"
        app:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="@id/imageButton2"
        app:layout_constraintEnd_toEndOf="@id/imageButton2"
        app:layout_constraintStart_toStartOf="@id/imageButton2"
        app:layout_constraintTop_toTopOf="@id/imageButton2"
        app:maxImageSize="55dp"
        app:rippleColor="#03A9F4" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="204dp"
        android:src="@drawable/add_button"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="60dp"
        app:rippleColor="#9C27B0"/>

    <TextView
            android:text=".../ 중간고사"
            android:fontFamily="@font/korean" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:textColorLink="#FFFFFF"
            android:textColor="#FFFFFF" app:layout_constraintVertical_bias="0.193" android:textSize="16sp"
            app:layout_constraintHorizontal_bias="0.499"/>
    <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp" app:srcCompat="@drawable/smallfolder" android:id="@+id/imageView6"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.348" app:layout_constraintVertical_bias="0.187"/>

</androidx.constraintlayout.widget.ConstraintLayout>